# Btech-project

./: MO_0hr_sheet.xlsx  MO_192hr_sheet.xlsx  MO_288hr_sheet.xlsx  MO_384hr_sheet.xlsx  MO_480hr_sheet.xlsx  MO_96hr_sheet.xlsx  README.md  combined_dataset.csv  dataset_generator.ipynb  prediction.ipynb  pyproject.toml  scripts.ipynb
